# langembed

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  dvc-smoke.yaml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: contrastive.yaml  eval.yaml  llm_embed.yaml  pretrain.yaml  tokenizer.yaml
configs/smoke/: contrastive.yaml  eval.yaml  pretrain.yaml  tokenizer.yaml
docs/: IMPLEMENTATION_PLAN.md
docs/ru/: README_RU.md
docs/superpowers/plans/: 2026-06-16-prototype-completion.md  2026-06-28-dvc-smoke-pipeline.md
docs/superpowers/specs/: 2026-06-16-langembed-completion-design.md  2026-06-28-dvc-smoke-pipeline-design.md
metrics/: smoke_eval.json
scripts/: seed_gold.py
smoke/: dvc.yaml
src/langembed/: __init__.py  config.py  preprocess.py
src/langembed/annotation/: active_learning.py  api.py  db.py  models.py  quality.py
src/langembed/annotation/label_studio/: sts_pairwise.xml  triplet_choice.xml
src/langembed/contrastive/: train_simcse.py  train_supervised.py
src/langembed/eval/: evaluate.py
src/langembed/llm_embed/: __init__.py  mntp.py  model.py  train_lora.py
src/langembed/pretrain/: train_mlm.py
src/langembed/serving/: serve.py
src/langembed/tokenizer/: train_tokenizer.py
tests/: conftest.py  test_active_learning.py  test_annotation_api.py  test_build_corpus.py  test_dedup.py  test_evaluate.py  test_llm_embed.py  test_preprocess.py  test_quality.py  test_serve.py  test_tokenizer.py
tests/e2e/: test_pipeline_english.py
tests/fixtures/: en_corpus.txt  en_sts_test.jsonl
